поправил документацию, в связи с добавлением поиска по названию. убрал закомментированные строки, поправил snake_case на camelCase. + верстка страницы отдельной новости.
